# evalops-kit

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/github_actions/: regression-check.yml
examples/golden_path/: README.md  dataset.jsonl  suite_baseline.toml  suite_regression.toml
examples/golden_path/traces_baseline/: case-1.json  case-2.json
examples/golden_path/traces_regression/: case-1.json
examples/minimal/: dataset.jsonl  suite.toml
examples/minimal/traces/: case-1.json  case-2.json
examples/openai_agents/: README.md
scripts/: demo_golden_path.py
src/evalops_kit/: __init__.py  cli.py  dataset.py  diff.py  errors.py  graders.py  run.py  suite.py  trace.py
src/evalops_kit/adapters/: __init__.py  openai_agents.py
tests/: test_cli.py  test_demo_golden_path.py  test_diff.py  test_openai_agents_adapter.py  test_run_pipeline.py
