[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalops-kit"
version = "0.1.0"
description = "EvalOps Kit command line tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
agents = ["openai-agents"]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]

[project.scripts]
evalops-kit = "evalops_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
